# iiko

./: .env-example  README.md  docker-compose.yml
backend_iiko/: .dockerignore  .env-example  Dockerfile  pyproject.toml  requirements.txt
backend_iiko/backend/backend/: __init__.py  celery.py  config.py  settings.py  urls.py  viewsets.py
backend_iiko/backend/core/: admin.py  api_descriptions.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend_iiko/backend/core/migrations/: 0001_initial.py  0002_passwordchangeconfirmation.py  0003_user_chains_user_organizations_user_restaurants.py  0004_alter_user_chains_alter_user_organizations_and_more.py
backend_iiko/backend/core/templates/core/: email_code.html  email_verification.html
backend_iiko/backend/menu/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend_iiko/backend/menu/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_category_name_alter_kitchen_name.py  0004_alter_product_count.py  0005_category_restaurant_kitchen_restaurant_and_more.py  0006_alter_product_price_ingredient_recipe.py  0007_remove_recipe_ingredient_recipe_ingredient.py
backend_iiko/backend/organization/: admin.py  api_descriptions.py  apps.py  filters.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
backend_iiko/backend/organization/migrations/: 0001_initial.py  0002_remove_organization_author_organization_authors_and_more.py  0003_alter_chain_name_alter_restaurant_name.py
frontend_iiko/: package-lock.json  package.json
frontend_iiko/src/: App.js
frontend_iiko/src/components/: Dashboard.js  Header.js  LoginForm.js  ProtectedRoute.js  RegistrationForm.js
frontend_iiko/src/utils/: cookies.js
